# Parallel_Programming

./: .bazelrc  .gitattributes  .gitignore  README.md  main.out  mock.out  type_sizes.cpp  type_sizes.out  vector_mock.cpp  vector_mock.out
cuda_lab_chapter_3/: matrix_add.cu  matrix_add_main.cu  matrix_mult_main.cu
data/: gen_data.cpp  gen_data.out
ipp-source-use/ch3/: mpi_mat_vect_mult.c  mpi_odd_even.c
ipp-source-use/ch4/: pth_busy_bar.c
ipp-source-use/ch5/: omp_fibo.c
ipp-source-use/ch6/: nbody_basic.h  nbody_basic.out  nbody_basic_main.c  nbody_basic_main.out  omp_nbody_basic.h  omp_nbody_red.h
lab1/: 2_bucles.cpp  2_bucles.go  BMF_block_multiply.cpp  BMF_block_multiply.out  BMF_book_example_both.cpp  BMF_book_example_both.out  BMF_book_example_both_monolithe.cpp  BMF_book_example_efficient.out  BMF_book_example_inefficient.out  BMF_classic_matrix_mult.cpp  BMF_classic_matrix_mult.out  cachegrind.out  callgrind.out.10331  callgrind.out.9459  cpp_functions.hpp  no_break.cpp  no_break.out
lab2/: integral.cpp  integral.out  matrix.out  readme.md  vector.cpp  vector.out
test/: cpp_test.cpp
test/performance/: CMakeLists.txt  int_O0_lab_1_results.json  int_O0_lab_1_results_matrix.json  int_O3_lab_1_results.json  lab_1.cpp  lab_1.out  non_failure.out  short_book_lab_1_results.json
test/performance/lab1/: BUILD.bazel  CMakeLists.txt  int_O3_lab_1_results_matrix.json  int_book_lab_1_results.json  short_O0_lab_1_results.json  short_O3_lab_1_results.json
test/performance/nbody_simple_vs_reduced/: CMakeLists.txt  one_process_nbody_bm.cpp
utils/: gen_data.hpp  new.hpp
utils/deprecated/: vector.hpp
